<resources>
    <string name="app_name">MedMind</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Past Scans</string>
    <string name="second_fragment_label">New Scan</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_create_qr">Create QR</string>
    <string name="action_clear_all_data">Clear all data</string>
    <string name="fragment_create_qr">Create a QR Code</string>
    <string name="intent_base_path">http://medmind.sdnsoft.com/scan?id=</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="camera_preferences">Camera</string>
    <string name="camera_preferences_details">Enables auto-focus of scan camera</string>
    <string name="app_preference">General</string>
    <string name="app_preference_clear">Clear all data</string>
</resources>