<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/app_preference">

        <Preference
            app:key="clear_all"
            app:title="@string/app_preference_clear"/>

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/camera_preferences">

        <SwitchPreferenceCompat
            app:key="auto_focus"
            app:title="@string/camera_preferences_details" />
    </PreferenceCategory>

</PreferenceScreen>