<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.sdnsoft.medmind.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_scanItemDetailsFragment"
            app:destination="@id/scanItemDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.sdnsoft.medmind.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/createQRFragment"
        android:name="com.sdnsoft.medmind.CreateQRFragment"
        android:label="@string/fragment_create_qr"
        tools:layout="@layout/fragment_create_qr">
        <action
            android:id="@+id/action_createQRFragment_pop"
            app:popUpTo="@id/createQRFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/scanItemDetailsFragment"
        android:name="com.sdnsoft.medmind.ScanItemDetailsFragment"
        android:label="fragment_item_list"
        tools:layout="@layout/fragment_item_list" >
        <action
            android:id="@+id/action_scanItemDetailsFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.sdnsoft.medmind.SettingsFragment"
        android:label="SettingsFragment" >
        <action
            android:id="@+id/action_settingsFragment_pop"
            app:popUpTo="@id/settingsFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <action android:id="@+id/action_global_settingsFragment" app:destination="@id/settingsFragment" />
    <action android:id="@+id/action_global_createQRFragment" app:destination="@id/createQRFragment" />
</navigation>